# docs/swagger/v1/admin.json
@@ -1368,19 +1368,24 @@
       "properties": {
         "id": {
           "type": "integer",
-          "format": "int64"
+          "format": "int64",
+          "description": " user id"
         },
         "firstName": {
-          "type": "string"
+          "type": "string",
+          "description": " first name"
         },
         "lastName": {
-          "type": "string"
+          "type": "string",
+          "description": " last name"
         },
         "email": {
-          "type": "string"
+          "type": "string",
+          "description": " email address"
         },
         "password": {
-          "type": "string"
+          "type": "string",
+          "description": " password"
         }
       },
       "title": "User",
@@ -1396,10 +1401,12 @@
       "type": "object",
       "properties": {
         "email": {
-          "type": "string"
+          "type": "string",
+          "description": " email address"
         },
         "password": {
-          "type": "string"
+          "type": "string",
+          "description": " password"
         }
       },
       "title": "UserLoginRequest",
@@ -1412,25 +1419,23 @@
       "type": "object",
       "properties": {
         "jwt": {
-          "$ref": "#/definitions/JwtToken"
+          "$ref": "#/definitions/JwtToken",
+          "description": " JwtToken object"
         },
         "user": {
-          "$ref": "#/definitions/User"
+          "$ref": "#/definitions/User",
+          "description": " User object"
         },
-        "statusCode": {
-          "type": "integer",
-          "format": "int64"
-        },
-        "statusMessage": {
-          "type": "string"
+        "status": {
+          "$ref": "#/definitions/ResponseStatus",
+          "description": " a ResponseStatus object"
         }
       },
       "title": "UserLoginResponse",
       "required": [
         "jwt",
         "user",
-        "statusCode",
-        "statusMessage"
+        "status"
       ]
     },
     "Variant": {
